[gd_scene load_steps=2 format=3 uid="uid://dghm5shlpuhvy"]

[ext_resource type="Script" uid="uid://dy82r64fd6fi3" path="res://Scripts/Item/garbage_ui.gd" id="1_7v0p1"]

[node name="Garbage_UI" type="CanvasLayer"]
script = ExtResource("1_7v0p1")

[node name="Panel" type="Panel" parent="."]
offset_right = 292.0
offset_bottom = 341.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_right = 292.0
offset_bottom = 158.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Name"

[node name="Label2" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Quality"

[node name="Label3" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "Desc"

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel"]
layout_mode = 0
offset_top = 165.0
offset_right = 292.0
offset_bottom = 276.0

[node name="Material1" type="Label" parent="Panel/VBoxContainer2"]
layout_mode = 2
text = "Mat1"

[node name="Material2" type="Label" parent="Panel/VBoxContainer2"]
layout_mode = 2
text = "Mat2"

[node name="Material3" type="Label" parent="Panel/VBoxContainer2"]
layout_mode = 2
text = "Mat3"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 0
offset_left = 11.0
offset_top = 297.0
offset_right = 279.0
offset_bottom = 328.0

[node name="Button" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Burn"

[node name="Button2" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Disassemble"

[node name="Button3" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Take"
